@@ -1,6 +1,7 @@
 2006-05-14  Ales Hakl  <ales at hakl dot net>
 
 	* src/control.c (native_macro_case): slightly simplified
+	when and unless macros
 
 2006-05-13  Ales Hakl  <ales at hakl dot net>
 
